complete: task using css grid to align 4 images fix responsive issues

--- a/My Portfolio/style.css
+++ b/My Portfolio/style.css
@@ -34,11 +34,6 @@ body{
     color: blue;
 }
 
-.main{
-    display: flex; 
-    gap: 20px; 
-    padding: 20px;
-}
 
 .grid-container {
     display: grid;
@@ -89,3 +84,11 @@ body{
     width: 100%;
     height: 100%;
   }
+  .box5 img{
+    height: 90%;
+  }
+
+
+
+
+ 
